added data endpoint for stream_dream

--- a/templates/stream_dream.html
+++ b/templates/stream_dream.html
@@ -5,8 +5,10 @@
 
 </style>
 
+<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+
 <h3> {{ gs.latest_post }} </h3>
-<table>
+<table class="sortable">
    <tr>
        <td>Pitcher</td>
        <td>ESPN Game Score</td>
