--- a/templates/stream_dream.html
+++ b/templates/stream_dream.html
@@ -43,7 +43,7 @@
     $(document).ready(function(){
         $('#stream_dream').DataTable({
             data : data,
-            "pageLength": 50,
+            "bPaginate": false,
             "order": [[ 2, "desc" ]],
             columns: [
                 { data: 'name' },
