add ops to stream_dream

--- a/templates/stream_dream.html
+++ b/templates/stream_dream.html
@@ -29,7 +29,7 @@
                             <td>ESPN Game Score</td>
                             <td>Opposing team</td>
                             <td>Venue</td>
-                            <td>wRC+ opp. team</td>
+                            <td>OPS opp. team</td>
                             <td>HR park factor</td>
                         </tr>
                     </thead>
@@ -51,7 +51,7 @@
                 { data: 'game_score'},
                 { data: 'opponent' },
                 { data: 'venue' },
-                { data: 'wrc' },
+                { data: 'ops' },
                 { data: 'park_factor' }
             ]
         });
